--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -43,7 +43,14 @@ header {
     margin-top: 4rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem;
+    padding: 1rem 1.5rem 1.5rem 1.5rem;
+}
+.me > img {
+    width: 100%;
+    height: 80%;
+    object-fit: cover;
+    position: absolute;
+    left: 1%;
 }
 /* -------scroll-------- */
 .scroll_down {
